fixed projects off centered on bigger screen

--- a/ray-portfolio/src/pages/styles.css
+++ b/ray-portfolio/src/pages/styles.css
@@ -63,6 +63,10 @@ body {
   font-size: 40px
 }
 
+.projects {
+  margin: auto;
+}
+
 .projectimage_container {
   max-width: 100%;
   border-radius: 10px;
